# whoogle-search

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .replit  .travis.yml  Dockerfile  Dockerfile.aarch64  Dockerfile.armhf  Kurdish Translation  LETA_INTEGRATION.md  LICENSE  MANIFEST.in  README.md  app.json  build_and_run.sh  docker-compose-traefik.yaml  docker-compose.yml  gen_ops.py  heroku.yml  opensearch.py  package-lock.json  pyproject.toml  requirements.txt  restart  results.codetf.json  rhyme.py  run  run.sh  server.py  setup.cfg  setup.py  whoogle-search  whoogle.env  whoogle.template.env
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-theme.md  question.md
.github/workflows/: .pre-commit-config.yaml  buildx-dev.yml  buildx.yml  docker_main.yml  docker_tests.yml  main.yml  pep8.yml  pypi.yml  scan.yml  stale.yml  tests.yml  zizmor.yml
app/: __init__.py  __main__.py  filter.py  request.py  rhyme.py  routes.py  url.py  version.py
app/models/: config.py  endpoint.py  g_classes.py
app/services/: http_client.py  provider.py
app/static/: opensearch.template
app/static/bangs/: 00-whoogle.json
app/static/css/: dark-theme.css  error.css  header.css  input.css  light-theme.css  logo.css  main.css  search-dark.css  search.css  system-theme.css  variables.css
app/static/js/: autocomplete.js  controller.js  currency.js  header.js  keyboard.js  speech.js  utils.js
app/static/settings/: countries.json  header_tabs.json  languages.json  themes.json  time_periods.json  translations.json
app/static/widgets/: calculator.html  color_picker.html
app/templates/: display.html  error.html  footer.html  header.html  imageresults.html  index.html  logo.html  opensearch.xml  search.html
app/utils/: bangs.py  captcha.py  filter_utils.py  gen_ddg_bangs.py  misc.py  results.py  routing_utils.py  search.py  session.py  session_utils.py  ua_generator.py  widgets.py
charts/whoogle/: Chart.yaml  values.yaml
charts/whoogle/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  (+1 more)
config/: opensearch.py  requirements.txt
misc/: check_google_user_agents.py  countries.json  generate_uas.py  heroku-regen.sh  instances.txt  languages.json  replit.py  update-translations.py
misc/tor/: control.conf  start-tor.sh  torrc
rc/: torrc
test/: conftest.py  misc  mock_google.py  test_alts.py  test_autocomplete.py  test_autocomplete_xml.py  test_captcha.py  test_http_client.py  test_json.py  test_misc.py  test_results.py  test_routes.py  test_routes_json.py  test_tor.py
test/test_files/: recaptcha_v2_callback.html
(+15 files in other folders)
