[metadata]
name = whoogle-search
url = https://github.com/benbusby/whoogle-search
description = Self-hosted, ad-free, privacy-respecting metasearch engine
long_description = file: README.md
long_description_content_type = text/markdown
keywords = search, metasearch, flask, adblock, degoogle, privacy
author = Ben Busby
author_email = contact@benbusby.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires=
    beautifulsoup4
    cssutils
    cryptography
    defusedxml
    Flask
    Flask-Session
    python-dotenv
    requests
    stem
    waitress

[options.extras_require]
test =
    pytest
    python-dateutil
dev = pycodestyle

[options.entry_points]
console_scripts =
    whoogle-search = app.routes:run_app
