[metadata]
name = whoogle-search
version = attr: app.version.__version__
url = https://github.com/benbusby/whoogle-search
description = Self-hosted, ad-free, privacy-respecting metasearch engine
long_description = file: README.md
long_description_content_type = text/markdown
keywords = search, metasearch, flask, adblock, degoogle, privacy
author = Ben Busby
author_email = contact@benbusby.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires=
    beautifulsoup4
    brotli
    cssutils
    cryptography
    defusedxml
    Flask
    python-dotenv
    requests
    stem
    validators
    waitress

[options.extras_require]
test =
    pytest
    python-dateutil
dev = pycodestyle

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    whoogle-search = app.routes:run_app
